# Halide

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: test.yml
apps/autoscheduler/: autotune_loop.sh
apps/autoscheduler/test_generators/: batch_matmul.cpp  conv1d_nlc.cpp  conv2d_bn_relu.cpp  conv2d_capsule_nhwijc.cpp  conv2d_nhwc.cpp  conv2d_transpose_nhwc.cpp  conv2d_transpose_nhwc_dilated.cpp  conv3d_ndhwc.cpp  depthwise_conv2d_nhwc.cpp  matmul_generator.cpp  norm_bmn.cpp  transpose_batch_matmul.cpp  transpose_batch_matmul_softmax.cpp
apps/batch_matmul/: Makefile  batch_matmul_generator.cpp  filter.cpp
apps/batch_norm/: Makefile  batch_norm_generator.cpp  filter.cpp
apps/conv1d_nlc/: CMakeLists.txt  Makefile  conv1d_nlc_generator.cpp  process.cpp
apps/conv2d_bn_relu/: CMakeLists.txt  Makefile  conv2d_bn_relu_generator.cpp  process.cpp
apps/conv2d_capsule_nhwijc/: CMakeLists.txt  Makefile  conv2d_capsule_nhwijc_generator.cpp  process.cpp
apps/conv2d_nchw/: conv_layer_generator.cpp  no-pad  process.cpp
apps/conv2d_nhwc/: CMakeLists.txt  Makefile  conv2d_nhwc_generator.cpp  process.cpp
apps/conv2d_transpose_nhwc/: CMakeLists.txt  Makefile  conv2d_transpose_nhwc_generator.cpp  process.cpp
apps/conv3d_ndhwc/: CMakeLists.txt  Makefile  conv3d_ndhwc_generator.cpp  process.cpp
apps/conv_layer_tvm_check/: README.md  conv_layer_generator.cpp  process.cpp  test_conv2d_halide.py  utils.h
apps/depthwise_conv2d_nhwc/: CMakeLists.txt  Makefile  depthwise_conv2d_nhwc_generator.cpp  process.cpp
apps/matmul_nkkm/: Makefile  filter.cpp  mat_mul_generator.cpp  matmul_generator.cpp  process.cpp  tvm_matmul_test.py
apps/support/: benchmark_util.h
apps/transpose_batch_matmul/: Makefile  filter.cpp  transpose_batch_matmul_generator.cpp
